--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,8 @@ add_executable(${PROJECT_NAME}
         Source/UI/Screens/Level1.h
         Source/UI/Screens/MetaProg.cpp
         Source/UI/Screens/MetaProg.h
+        Source/Components/UpgradeManager.cpp
+        Source/Components/UpgradeManager.h
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE GLEW::GLEW SDL2::SDL2 SDL2_image::SDL2_image SDL2_mixer::SDL2_mixer SDL2_ttf::SDL2_ttf OpenGL::GL)
