--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,8 +99,8 @@ add_executable(${PROJECT_NAME}
         Source/Renderer/Font.h
         Source/UI/Screens/Level1.cpp
         Source/UI/Screens/Level1.h
-        Source/UI/Screens/MetaProg.cpp
-        Source/UI/Screens/MetaProg.h
+        Source/UI/Screens/UpgradeStore.cpp
+        Source/UI/Screens/UpgradeStore.h
         Source/Managers/UpgradeManager.cpp
         Source/Managers/UpgradeManager.h
         Source/Actors/weapons/laser_beam/LaserGun.cpp
@@ -130,6 +130,10 @@ add_executable(${PROJECT_NAME}
         Source/Actors/Enemy.h
         Source/Actors/XPGem.cpp
         Source/Actors/XPGem.h
+        ##Source/UI/Screens/LevelUp.cpp
+        ##Source/UI/Screens/LevelUp.h
+        Source/Components/Upgrades/UpgradeComponent.cpp
+        Source/Components/Upgrades/UpgradeComponent.h
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE GLEW::GLEW SDL2::SDL2 SDL2_image::SDL2_image SDL2_mixer::SDL2_mixer SDL2_ttf::SDL2_ttf OpenGL::GL)
