Novos inimigos + Waves Completas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,10 @@ add_executable(${PROJECT_NAME}
         Source/Actors/Enemy.h
         Source/Actors/XPGem.cpp
         Source/Actors/XPGem.h
+        Source/Actors/enemies/EnemyGround.cpp
+        Source/Actors/enemies/EnemyGround.h
+        Source/Actors/enemies/EnemyFly.cpp
+        Source/Actors/enemies/EnemyFly.h
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE GLEW::GLEW SDL2::SDL2 SDL2_image::SDL2_image SDL2_mixer::SDL2_mixer SDL2_ttf::SDL2_ttf OpenGL::GL)
